fix [MAP]: fixed scroll bug on mobile

--- a/src/app/pages/image-view/map/map.component.scss
+++ b/src/app/pages/image-view/map/map.component.scss
@@ -1,4 +1,4 @@
 agm-map {
-  height: calc(100vh - 50px - 61.22px);
+  height: 100%;
 }
 
